--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@univerjs/sheets-ui": "^0.1.3",
     "@univerjs/ui": "^0.1.3",
     "@vueuse/core": "^10.9.0",
+    "nanoid": "^5.0.6",
     "vue": "^3.4.21"
   },
   "devDependencies": {
