chore: lock deps

--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@univerjs/core": "^0.1.6",
-    "@univerjs/design": "^0.1.6",
-    "@univerjs/docs": "^0.1.6",
-    "@univerjs/docs-ui": "^0.1.6",
-    "@univerjs/engine-formula": "^0.1.6",
-    "@univerjs/engine-render": "^0.1.6",
-    "@univerjs/sheets": "^0.1.6",
-    "@univerjs/sheets-formula": "^0.1.6",
-    "@univerjs/sheets-ui": "^0.1.6",
-    "@univerjs/ui": "^0.1.6",
+    "@univerjs/core": "0.1.6",
+    "@univerjs/design": "0.1.6",
+    "@univerjs/docs": "0.1.6",
+    "@univerjs/docs-ui": "0.1.6",
+    "@univerjs/engine-formula": "0.1.6",
+    "@univerjs/engine-render": "0.1.6",
+    "@univerjs/sheets": "0.1.6",
+    "@univerjs/sheets-formula": "0.1.6",
+    "@univerjs/sheets-ui": "0.1.6",
+    "@univerjs/ui": "0.1.6",
     "@vueuse/core": "^10.9.0",
     "nanoid": "^5.0.6",
     "vue": "^3.4.21"
