chore: update univer version to latest

--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@univerjs/core": "0.1.6",
-    "@univerjs/design": "0.1.6",
-    "@univerjs/docs": "0.1.6",
-    "@univerjs/docs-ui": "0.1.6",
-    "@univerjs/engine-formula": "0.1.6",
-    "@univerjs/engine-render": "0.1.6",
-    "@univerjs/sheets": "0.1.6",
-    "@univerjs/sheets-formula": "0.1.6",
-    "@univerjs/sheets-ui": "0.1.6",
-    "@univerjs/ui": "0.1.6",
+    "@univerjs/core": "^0.4.2",
+    "@univerjs/design": "^0.4.2",
+    "@univerjs/docs": "^0.4.2",
+    "@univerjs/docs-ui": "^0.4.2",
+    "@univerjs/engine-formula": "^0.4.2",
+    "@univerjs/engine-render": "^0.4.2",
+    "@univerjs/facade": "^0.4.2",
+    "@univerjs/sheets": "^0.4.2",
+    "@univerjs/sheets-formula": "^0.4.2",
+    "@univerjs/sheets-formula-ui": "^0.4.2",
+    "@univerjs/sheets-numfmt-ui": "0.4.0-nightly.202410290723",
+    "@univerjs/sheets-sort": "^0.4.2",
+    "@univerjs/sheets-thread-comment-ui": "0.4.0-nightly.202410290723",
+    "@univerjs/sheets-ui": "^0.4.2",
+    "@univerjs/sheets-zen-editor": "^0.4.2",
+    "@univerjs/ui": "^0.4.2",
     "@vueuse/core": "^10.9.0",
     "nanoid": "^5.0.6",
     "vue": "^3.4.21"
