feat: add zen & sort plugin

--- a/package.json
+++ b/package.json
@@ -26,9 +26,8 @@
     "@univerjs/sheets": "^0.4.2",
     "@univerjs/sheets-formula": "^0.4.2",
     "@univerjs/sheets-formula-ui": "^0.4.2",
-    "@univerjs/sheets-numfmt-ui": "0.4.0-nightly.202410290723",
     "@univerjs/sheets-sort": "^0.4.2",
-    "@univerjs/sheets-thread-comment-ui": "0.4.0-nightly.202410290723",
+    "@univerjs/sheets-sort-ui": "^0.4.2",
     "@univerjs/sheets-ui": "^0.4.2",
     "@univerjs/sheets-zen-editor": "^0.4.2",
     "@univerjs/ui": "^0.4.2",
