--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@9.12.3",
   "license": "MIT",
   "scripts": {
-    "build": "vite build",
+    "build": "pnpm zx script/build.mjs",
     "dev": "vite --port 3333 --open",
     "lint": "eslint .",
     "typecheck": "vue-tsc --noEmit",
@@ -48,6 +48,7 @@
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.14.0",
     "eslint-plugin-format": "^0.1.2",
+    "fs-extra": "^11.2.0",
     "jsdom": "^25.0.1",
     "lint-staged": "^15.2.10",
     "pnpm": "^9.12.3",
@@ -63,7 +64,8 @@
     "vite": "^5.4.10",
     "vite-plugin-node-polyfills": "^0.22.0",
     "vitest": "^2.1.4",
-    "vue-tsc": "^2.1.10"
+    "vue-tsc": "^2.1.10",
+    "zx": "^8.2.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
