--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vite-plugin-dts": "^4.3.0"
   }
 }
