--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@univerjs/core": "^0.4.2",
     "@univerjs/design": "^0.4.2",
     "@univerjs/docs": "^0.4.2",
+    "@univerjs/docs-hyper-link-ui": "^0.4.2",
+    "@univerjs/docs-thread-comment-ui": "^0.4.2",
     "@univerjs/docs-ui": "^0.4.2",
     "@univerjs/engine-formula": "^0.4.2",
     "@univerjs/engine-render": "^0.4.2",
     "@univerjs/facade": "^0.4.2",
     "@univerjs/sheets": "^0.4.2",
+    "@univerjs/sheets-conditional-formatting-ui": "^0.4.2",
     "@univerjs/sheets-formula": "^0.4.2",
     "@univerjs/sheets-formula-ui": "^0.4.2",
     "@univerjs/sheets-sort": "^0.4.2",
@@ -40,6 +43,7 @@
     "@iconify-json/carbon": "^1.2.4",
     "@release-it/conventional-changelog": "^9.0.2",
     "@types/node": "^20.17.6",
+    "@univerjs/vite-plugin": "^0.5.0",
     "@unocss/eslint-config": "^0.63.6",
     "@unocss/eslint-plugin": "^0.63.6",
     "@unocss/reset": "^0.63.6",
