--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@univerjs/engine-formula": "^0.4.2",
     "@univerjs/engine-render": "^0.4.2",
     "@univerjs/facade": "^0.4.2",
+    "@univerjs/find-replace": "^0.4.2",
     "@univerjs/sheets": "^0.4.2",
     "@univerjs/sheets-conditional-formatting-ui": "^0.4.2",
+    "@univerjs/sheets-find-replace": "^0.4.2",
     "@univerjs/sheets-formula": "^0.4.2",
     "@univerjs/sheets-formula-ui": "^0.4.2",
     "@univerjs/sheets-sort": "^0.4.2",
