--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "packageManager": "pnpm@9.12.0",
   "license": "MIT",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=9"
+  },
   "scripts": {
     "build": "pnpm zx script/build.mjs",
     "dev": "vite --port 3333 --open",
@@ -16,29 +20,32 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@univerjs/core": "^0.4.2",
-    "@univerjs/design": "^0.4.2",
-    "@univerjs/docs": "^0.4.2",
-    "@univerjs/docs-hyper-link-ui": "^0.4.2",
-    "@univerjs/docs-thread-comment-ui": "^0.4.2",
-    "@univerjs/docs-ui": "^0.4.2",
-    "@univerjs/engine-formula": "^0.4.2",
-    "@univerjs/engine-render": "^0.4.2",
-    "@univerjs/facade": "^0.4.2",
-    "@univerjs/find-replace": "^0.4.2",
-    "@univerjs/sheets": "^0.4.2",
-    "@univerjs/sheets-conditional-formatting-ui": "^0.4.2",
-    "@univerjs/sheets-data-validation-ui": "^0.4.2",
-    "@univerjs/sheets-find-replace": "^0.4.2",
-    "@univerjs/sheets-formula": "^0.4.2",
-    "@univerjs/sheets-formula-ui": "^0.4.2",
-    "@univerjs/sheets-sort": "^0.4.2",
-    "@univerjs/sheets-sort-ui": "^0.4.2",
-    "@univerjs/sheets-thread-comment-ui": "0.4.0-nightly.202410290723",
-    "@univerjs/sheets-ui": "^0.4.2",
-    "@univerjs/sheets-zen-editor": "^0.4.2",
-    "@univerjs/ui": "^0.4.2",
-    "@univerjs/uniscript": "^0.4.2",
+    "@univerjs/core": "^0.5.1",
+    "@univerjs/design": "^0.5.1",
+    "@univerjs/docs": "^0.5.1",
+    "@univerjs/docs-hyper-link-ui": "^0.5.1",
+    "@univerjs/docs-thread-comment-ui": "^0.5.1",
+    "@univerjs/docs-ui": "^0.5.1",
+    "@univerjs/engine-formula": "^0.5.1",
+    "@univerjs/engine-render": "^0.5.1",
+    "@univerjs/facade": "^0.5.1",
+    "@univerjs/sheets": "^0.5.1",
+    "@univerjs/sheets-conditional-formatting-ui": "^0.5.1",
+    "@univerjs/sheets-crosshair-highlight": "^0.5.1",
+    "@univerjs/sheets-data-validation-ui": "^0.5.1",
+    "@univerjs/sheets-drawing-ui": "^0.5.1",
+    "@univerjs/sheets-filter-ui": "^0.5.1",
+    "@univerjs/sheets-find-replace": "^0.5.1",
+    "@univerjs/sheets-formula": "^0.5.1",
+    "@univerjs/sheets-formula-ui": "^0.5.1",
+    "@univerjs/sheets-numfmt-ui": "^0.5.1",
+    "@univerjs/sheets-sort": "^0.5.1",
+    "@univerjs/sheets-sort-ui": "^0.5.1",
+    "@univerjs/sheets-ui": "^0.5.1",
+    "@univerjs/sheets-zen-editor": "^0.5.1",
+    "@univerjs/ui": "^0.5.1",
+    "@univerjs/uniscript": "^0.5.1",
+    "@univerjs/watermark": "^0.5.1",
     "@vueuse/core": "^11.2.0",
     "nanoid": "^5.0.8",
     "vue": "^3.5.12"
@@ -48,7 +55,7 @@
     "@iconify-json/carbon": "^1.2.4",
     "@release-it/conventional-changelog": "^9.0.2",
     "@types/node": "^20.17.6",
-    "@univerjs/vite-plugin": "^0.5.0",
+    "@univerjs/vite-plugin": "^0.5.1",
     "@unocss/eslint-config": "^0.63.6",
     "@unocss/eslint-plugin": "^0.63.6",
     "@unocss/reset": "^0.63.6",
